Made some changes in the config files
The website was not loading the images, I did some changes to the config files to solve this

--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -1,6 +1,6 @@
 - profile:
-  initials: RF
-  name: Ruxandra Fediuc
+  initials: MB
+  name: Matt Behbooei
   profession: |
     Software Architect &
     Senior Software Engineer
