--- a/content/social.yaml
+++ b/content/social.yaml
@@ -1,11 +1,11 @@
 - name: linkedin
-  url: https://linkedin.com/in/ruxandrafediuc
+  url: https://www.linkedin.com/in/mbehbooei
 
-- name: twitter
-  url: https://twitter.com/ruxandrafed
+# - name: twitter
+#   url: 
 
-- name: producthunt
-  url: https://www.producthunt.com/@ruxandrafed
+# - name: producthunt
+#   url: https://www.producthunt.com/@ruxandrafed
 
 - name: github
-  url: https://github.com/ruxandrafed
+  url: https://github.com/mobehbooei
