--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ruxandrafediuc.com",
-  "description": "Ruxandra Fediuc - Resume, personal website",
+  "description": "Matt Behbooei - Resume, personal website",
   "version": "2.0.1",
   "main": "index.js",
-  "author": "Ruxandra Fediuc <ruxandra.fediuc@gmail.com>",
+  "author": "Matt Behbooei <mbehbooei@gmail.com>",
   "dependencies": {
     "autoprefixer": "^10.2.5",
     "color": "^3.1.3",
@@ -58,10 +58,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ruxandrafed/ruxandrafed.github.io"
+    "url": "https://github.com/mobehbooei/personal-website"    
   },
   "bugs": {
-    "url": "https://github.com/ruxandrafed/ruxandrafed.github.io/issues"
+    "url": "https://github.com/mobehbooei/personal-website/issues"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
