Updated CNAME to valid domain
Also updated some content

--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -2,12 +2,12 @@
   initials: MB
   name: Matt Behbooei
   profession: |
-    Software Architect &
-    Senior Software Engineer
+    AI Product Strategist &
+    Senior Machine Learning Engineer
   image: images/profile.jpg
-  location: Vancouver, Canada
+  location: Toronto, Canada
   remote: true
-  company: CTO.ai
+  company: Viral Nation
   for_hire: true
   focus: Cloud Computing, JavaScript, Developer Experience, Kubernetes
   about: |
